# robotics-ai

./: .gitignore  README.md  requirements.txt
.claude/skills/: slide.md
.github/workflows/: ci.yml  sim-demo.yml
config/: robot_config.yaml
docker/: Dockerfile  Dockerfile.jetson  Dockerfile.simulation  docker-compose.yml  entrypoint_sim.sh
docs/: hardware.md  iteration_progress.html  jetbot_roadmap.html  project_overview.html  simulation_demo.html  simulation_setup.md
docs/templates/: accenture_slide_template.html
ros2_ws/src/robotics_ai/: package.xml  setup.py
ros2_ws/src/robotics_ai/robotics_ai/nodes/: perception_node.py
ros2_ws/src/sim_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim_demo/launch/: ur5e_demo.launch.py
ros2_ws/src/sim_demo/sim_demo/: perception_node.py  pick_and_place_node.py  video_recorder_node.py
ros2_ws/src/sim_demo/worlds/: cube_blue.sdf  cube_green.sdf  cube_red.sdf  overhead_camera.sdf  scene_workbench.sdf  semiconductor_workbench.world
scripts/: record_demo.sh  train.py
tests/: conftest.py  test_perception.py  test_train.py
