<?xml version="1.0"?>
<package format="3">
  <name>sim_demo</name>
  <version>0.1.0</version>
  <description>UR5e pick &amp; place simulation demo with MP4 recording</description>
  <maintainer email="dev@example.com">Robotics AI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ur_description</depend>
  <depend>ur_moveit_config</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
