<?xml version="1.0"?>
<package format="3">
  <name>sim_demo</name>
  <version>0.1.0</version>
  <description>UR5e pick &amp; place simulation demo with MP4 recording</description>
  <maintainer email="dev@example.com">Robotics AI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>ur_description</depend>
  <depend>ur_simulation_gazebo</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
